adicionando o health check

--- a/CriacaoDePropostas/src/main/resources/application.properties
+++ b/CriacaoDePropostas/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:7075/Aplicacao
 spring.datasource.username=root
 spring.datasource.password=root
+
+management.endpoint.health.show-details=always
