--- a/CriacaoDePropostas/src/main/resources/application.properties
+++ b/CriacaoDePropostas/src/main/resources/application.properties
@@ -7,4 +7,11 @@ spring.datasource.url=jdbc:postgresql://localhost:7075/Aplicacao
 spring.datasource.username=root
 spring.datasource.password=root
 
+
+management.endpoint.health.group.custom.show-components=always
 management.endpoint.health.show-details=always
+management.endpoint.health.status.http-mapping.down=503
+
+
+
+periodicidade.executa-operacao=30000
