--- a/CriacaoDePropostas/src/main/resources/application.properties
+++ b/CriacaoDePropostas/src/main/resources/application.properties
@@ -3,10 +3,12 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:7075/Aplicacao
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:7075/Aplicacao}
 spring.datasource.username=root
 spring.datasource.password=root
 
+
+server.port=8079
 
 management.endpoint.health.group.custom.show-components=always
 management.endpoint.health.show-details=always
