--- a/CriacaoDePropostas/docker-compose.yaml
+++ b/CriacaoDePropostas/docker-compose.yaml
@@ -21,6 +21,15 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
 
+  containerizacao:
+    image: contlucasjava
+    environment: 
+      DATABASE_URL: "jdbc:postgresql://postgres2:5432/Aplicacao"
+    ports: 
+      - 5433:8079
+    depends_on: 
+      - postgres2
+
   postgres:
     image: 'postgres:alpine'
     volumes:
@@ -36,7 +45,7 @@ services:
   postgres2:
     image: 'postgres:alpine'
     volumes:
-      - postgres-volume:/var/lib/postgressql/dataAplication
+      - postgres-volume2:/var/lib/postgressql/data
     ports:
       - 7075:5432
     environment:
@@ -145,16 +154,9 @@ services:
       VAULT_TOKEN: ee413645-dbe8-4848-afc6-6bb2768ada75
       VAULT_ADDR: http://127.0.0.1:8200
 
-  containerizacao:
-    image: contlucasjava
-    environment: 
-      DATABASE_URL: "jdbc:postgresql://postgres2:7075/Aplicacao"
-    ports: 
-      - 5433:8079
-    depends_on: 
-      - postgres2
-
+  
 volumes:
   grafana-volume:
   prometheus-volume:
   postgres-volume:
+  postgres-volume2:
