--- a/CriacaoDePropostas/src/main/resources/application.properties
+++ b/CriacaoDePropostas/src/main/resources/application.properties
@@ -15,5 +15,13 @@ management.endpoint.health.show-details=always
 management.endpoint.health.status.http-mapping.down=503
 
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/nosso-cartao}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/nosso-cartao/protocol/openid-connect/certs}
+
+
+keycloak.domain=http://localhost:18080
+keycloak.realm=nosso-cartao
 
 periodicidade.executa-operacao=30000
+
+
