--- a/CriacaoDePropostas/docker-compose.yaml
+++ b/CriacaoDePropostas/docker-compose.yaml
@@ -130,6 +130,7 @@ services:
   prometheus:
     image: prom/prometheus
     volumes:
+     - ./prometheus.yml:/etc/prometheus/prometheus.yml
      - prometheus-volume:/etc/prometheus/
     network_mode: bridge
     ports:
