--- a/CriacaoDePropostas/pom.xml
+++ b/CriacaoDePropostas/pom.xml
@@ -52,14 +52,14 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 
-		<!--  <dependency>
+		  <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-oauth2-jose</artifactId>
-		</dependency> -->
+		</dependency> 
 
 		<dependency>
 			<groupId>io.micrometer</groupId>
